[metadata]
name = instabrade
author = Levi Noecker
author-email = levi.noecker@gmail.com
summary = Selenium based Instagram Scraper
description-file = README.rst
home-page = https://github.com/levi-rs/instabrade
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    setup
    distutils

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    instabrade

[wheel]
universal = 1

[flake8]
count = True
statistics = True
max-complexity = 10
max-line-length = 100
output-file = {envdir}/flake8.txt
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
